User can create,delete,edit polls but can't add options

--- a/app/views/polls/new.html.erb
+++ b/app/views/polls/new.html.erb
@@ -5,20 +5,24 @@
     <%= f.label :topic %>
     <%= f.text_area :topic, rows: 3, required: true, class: 'form-control' %>
   </div>
+
   <div class="panel panel-default">
     <div class="panel-heading">Options</div>
-  </div>
+    <div class="panel-body">
 
-<div class="panel panel-default">
-  <%= f.fields_for :vote_options do |options_form| %>
-  <div class="nested-fields">
-    <div class="form-group">
-      <%= f.label :Option %>
-      <%= f.text_field :topic, class: 'form-control', required: true %>
+      <%= f.fields_for :vote_options do |options_form| %>
+        <div class="nested-fields">
+          <div class="form-group">
+            <%= f.label :topic %>
+            <%= f.text_field :topic, class: 'form-control', required: true %>
+          </div>
+          <%= link_to_remove_association "remove option", f %>
+        </div>
+      <% end %>
+      <div class="links">
+        <%= link_to 'add option' %>
+      </div>
     </div>
-  <%= link_to_remove_association "Remove option", f %>
   </div>
-  <% end %>
-</div>
-<%= f.submit 'Create', class: 'btn btn-primary btn-lg' %>
+  <%= f.submit 'Create', class: 'btn btn-primary btn-lg' %>
 <% end %>
