--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,15 @@
     <ul class="nav navbar-nav">
       <li><%= link_to 'Add poll', new_poll_path %></li>
     </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <% if current_user %>
+        <li><%= image_tag current_user.image_url, alt: current_user.name %></li>
+        <li><%= link_to 'Logout', sign_out_path %></li>
+      <% else %>
+        <li><%= link_to 'Sign in', '/auth/facebook' %></li>
+      <% end %>
+    </ul>
+
   </div>
 </div>
 
