Current User Method Added

--- a/app/views/polls/index.html.erb
+++ b/app/views/polls/index.html.erb
@@ -5,17 +5,17 @@
 
     <p>
       <% if current_user %>
-        <%= link_to 'Participate!', poll_path(poll), class: 'btn btn-primary btn-lg block' %>
+        <%= link_to 'Participate!', poll_path(poll), class: 'btn btn-default' %>
+        <div class="btn-group">
+          <%= link_to 'Edit', edit_poll_path(poll), class: 'btn btn-default' %>
+          <%= link_to 'Delete', poll_path(poll),
+                    method: :delete,
+                    class: 'btn btn-danger', data: {confirm: 'Are you sure?'} %>
+      </div>
+
       <% else %>
         Please sign in via <%= link_to 'Google', '/auth/google_oauth2' %> to participate in this poll.
       <% end %>
     </p>
-
-    <div class="btn-group">
-      <%= link_to 'Edit', edit_poll_path(poll), class: 'btn btn-default' %>
-      <%= link_to 'Delete', poll_path(poll),
-                  method: :delete,
-                  class: 'btn btn-danger', data: {confirm: 'Are you sure?'} %>
     </div>
-  </div>
 <% end %>
