--- a/app/views/polls/_form.html.erb
+++ b/app/views/polls/_form.html.erb
@@ -18,6 +18,9 @@
         <%= link_to_remove_association "remove option", f %>
       </div>
       <% end %>
+      <div class="links">
+        <%= link_to_add_association 'add option', f, :vote_options%>
+      </div>
     </div>
   </div>
 
