--- a/app/views/polls/_form.html.erb
+++ b/app/views/polls/_form.html.erb
@@ -3,23 +3,17 @@
 
   <div class="form-group">
     <%= f.label :topic %>
-    <%= f.text_area :topic, rows: 3, required: true, class: 'form-control' %>
+    <%= f.text_field :topic, class: 'form-control', required: true %>
   </div>
 
   <div class="panel panel-default">
     <div class="panel-heading">Options</div>
     <div class="panel-body">
       <%= f.fields_for :vote_options do |options_form| %>
-      <div class="nested-fields">
-        <div class="form-group">
-          <%= f.label :topic %>
-          <%= f.text_field :topic, class: 'form-control', required: true %>
-        </div>
-        <%= link_to_remove_association "remove option", f %>
-      </div>
+          <%= render 'vote_option_fields', f: options_form %>
       <% end %>
       <div class="links">
-        <%= link_to_add_association 'add option', f, :vote_options%>
+        <%= link_to_add_association 'add options', f, :vote_options%>
       </div>
     </div>
   </div>
