--- a/app/views/polls/_form.html.erb
+++ b/app/views/polls/_form.html.erb
@@ -8,7 +8,7 @@
 
   <div class="panel panel-default">
     <div class="panel-heading">Options</div>
-    <div class="panel-body">
+    <div class="panel-body" id="vote_options">
       <%= f.fields_for :vote_options do |options_form| %>
           <%= render 'vote_option_fields', f: options_form %>
       <% end %>
