--- a/app/views/polls/_vote_option.html.erb
+++ b/app/views/polls/_vote_option.html.erb
@@ -3,7 +3,7 @@
   <%= content_tag(:label) do %>
     <% unless current_user.voted_for?(@poll) %>
     <% end %>
-    <%= option.titles %>
+    <%= option.id %>
   <% end %>
   <%= visualize_votes_for option %>
 </div>
