--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <% if current_user %>
-        <li><%= image_tag current_user.image_url, alt: current_user.name %></li>
+        <li><%= image_tag current_user.image_url, :size => "70x60", alt: current_user.name %></li>
         <li><%= link_to 'Logout', sign_out_path %></li>
       <% else %>
         <li><%= link_to 'Sign in', '/auth/google_oauth2' %></li>
