--- a/app/views/polls/_vote_option.html.erb
+++ b/app/views/polls/_vote_option.html.erb
@@ -1,9 +1,9 @@
 <div class="form-group">
-  <p>Options 2.5</p>
   <%= content_tag(:label) do %>
     <% unless current_user.voted_for?(@poll) %>
+      <%= radio_button_tag 'vote_option[id]', option.id %>
     <% end %>
-    <%= option.id %>
+    <%= option.title %>
   <% end %>
   <%= visualize_votes_for option %>
 </div>
