--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,7 +26,7 @@
  $navbar-default-link-color: black;
  $text-color: black;
  $well-bg: lightgrey;
- $body-bg: slateblue;
+ $body-bg: white;
  $link-color: black;
  $input-bg: black;
  $input-color: white;
